// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdresseTableContainer > snapshot test 1`] = `
<div>
  <div
    class="adresseTable menypanel__table-wrapper"
  >
    <table
      class="navds-table navds-table--medium menypanel__table"
    >
      <thead
        class="navds-table__header"
      >
        <tr
          class="navds-table__row navds-table__row--shade-on-hover"
        >
          <th
            class="navds-table__header-cell navds-label fixed-width "
          >
            Bostedsadresse
          </th>
          <th
            class="navds-table__header-cell navds-label"
          >
            Register
          </th>
          <th
            class="navds-table__header-cell navds-label"
          >
            Kilde
          </th>
          <th
            class="navds-table__header-cell navds-label fixed-width"
          >
            Gyldig f.o.m.
          </th>
        </tr>
      </thead>
      <tbody
        class="navds-table__body"
      >
        <tr
          class="navds-table__row navds-table__row--shade-on-hover"
        >
          <td
            class="navds-table__data-cell navds-body-short"
          >
            <address>
              <div>
                Co Yo 1
              </div>
              <div />
              <div>
                bosted gata 3
                 
                42
              </div>
              <div>
                 
                0001
                 
              </div>
              <div>
                 
                STORBRITANNIA
              </div>
            </address>
          </td>
          <td
            class="navds-table__data-cell navds-body-short"
          >
            FREG
          </td>
          <td
            class="navds-table__data-cell navds-body-short"
          >
            Folkeregisteret
          </td>
          <td
            class="navds-table__data-cell gyldig-label navds-body-short"
          >
            16.06.1995
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="adresseTable menypanel__table-wrapper"
  >
    <div
      class="chevronKnapp"
    >
      <button
        type="button"
      >
        Åpne historikk
        <span
          class="nav-frontend-chevron chevronboks chevron--ned"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`AdresseTableContainer > snapshot test historisk åpnet 1`] = `
<div>
  <div
    class="adresseTable menypanel__table-wrapper"
  >
    <table
      class="navds-table navds-table--medium menypanel__table"
    >
      <thead
        class="navds-table__header"
      >
        <tr
          class="navds-table__row navds-table__row--shade-on-hover"
        >
          <th
            class="navds-table__header-cell navds-label fixed-width "
          >
            Bostedsadresse
          </th>
          <th
            class="navds-table__header-cell navds-label"
          >
            Register
          </th>
          <th
            class="navds-table__header-cell navds-label"
          >
            Kilde
          </th>
          <th
            class="navds-table__header-cell navds-label fixed-width"
          >
            Gyldig f.o.m.
          </th>
        </tr>
      </thead>
      <tbody
        class="navds-table__body"
      >
        <tr
          class="navds-table__row navds-table__row--shade-on-hover"
        >
          <td
            class="navds-table__data-cell navds-body-short"
          >
            <address>
              <div>
                Co Yo 1
              </div>
              <div />
              <div>
                bosted gata 3
                 
                42
              </div>
              <div>
                 
                0001
                 
              </div>
              <div>
                 
                STORBRITANNIA
              </div>
            </address>
          </td>
          <td
            class="navds-table__data-cell navds-body-short"
          >
            FREG
          </td>
          <td
            class="navds-table__data-cell navds-body-short"
          >
            Folkeregisteret
          </td>
          <td
            class="navds-table__data-cell gyldig-label navds-body-short"
          >
            16.06.1995
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="adresseTable menypanel__table-wrapper"
  >
    <table
      class="navds-table navds-table--medium menypanel__table"
    >
      <thead
        class="navds-table__header"
      >
        <tr
          class="navds-table__row navds-table__row--shade-on-hover"
        >
          <th
            class="navds-table__header-cell navds-label fixed-width transparent"
          >
            Bostedsadresse
          </th>
          <th
            class="navds-table__header-cell navds-label transparent"
          >
            Register
          </th>
          <th
            class="navds-table__header-cell navds-label transparent"
          >
            Kilde
          </th>
          <th
            class="navds-table__header-cell navds-label fixed-width"
          >
            Gyldig f.o.m. - t.o.m.
          </th>
        </tr>
      </thead>
      <tbody
        class="navds-table__body"
      >
        <tr
          class="navds-table__row navds-table__row--shade-on-hover"
        >
          <td
            class="navds-table__data-cell navds-body-short"
          >
            <address>
              <div />
              <div>
                tilleggg navn
              </div>
              <div>
                 
              </div>
              <div>
                 
                2414
                 
                ELVERUM
              </div>
              <div>
                 
                NORGE
              </div>
            </address>
          </td>
          <td
            class="navds-table__data-cell navds-body-short"
          >
            FREG
          </td>
          <td
            class="navds-table__data-cell navds-body-short"
          >
            Folkeregisteret
          </td>
          <td
            class="navds-table__data-cell historisk-label navds-body-short"
          >
            12.09.1957 - 
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="chevronKnapp"
    >
      <button
        type="button"
      >
        Lukk historikk
        <span
          class="nav-frontend-chevron chevronboks chevron--opp"
        />
      </button>
    </div>
  </div>
</div>
`;
